--- a/app/src/main/res/layout/fragment_2.xml
+++ b/app/src/main/res/layout/fragment_2.xml
@@ -21,6 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        android:elevation="4dp"
         android:orientation="vertical"
         android:padding="10dp">
 
@@ -28,40 +29,48 @@
             android:id="@+id/textView7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="60dp"
+            android:layout_marginTop="20dp"
+            android:paddingBottom="2dp"
             android:text="Age"
             android:textSize="16sp"
             android:textStyle="bold" />
 
         <EditText
-            android:id="@+id/editTextTextPersonName"
+            android:id="@+id/frag2_age_edTxt"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="40dp"
+            android:layout_marginBottom="16dp"
             android:background="@drawable/outlined_rectangle"
             android:ems="10"
             android:fontFamily="sans-serif-condensed-light"
+            android:hint="Age in number"
             android:inputType="textPersonName"
-            android:text="Age" />
+            android:paddingLeft="6dp" />
 
         <TextView
             android:id="@+id/textView15"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Height" />
+            android:paddingBottom="2dp"
+            android:text="Height"
+            android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <EditText
-                android:id="@+id/editTextTextPersonName3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:id="@+id/frag2_height_ft_edTxt"
+                android:layout_width="140dp"
+                android:layout_height="40dp"
+                android:layout_marginBottom="16dp"
                 android:background="@drawable/outlined_rectangle"
                 android:ems="10"
                 android:fontFamily="sans-serif-condensed-light"
+                android:hint="feet"
                 android:inputType="textPersonName"
+                android:paddingLeft="6dp"
                 android:text="" />
 
             <TextView
@@ -69,24 +78,27 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:paddingStart="8dp"
                 android:text="ft" />
 
             <EditText
-                android:id="@+id/editTextTextPersonName4"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:id="@+id/frag2_height_inc_edTxt"
+                android:layout_width="140dp"
+                android:layout_height="40dp"
                 android:layout_weight="1"
                 android:background="@drawable/outlined_rectangle"
                 android:ems="10"
                 android:fontFamily="sans-serif-condensed-light"
+                android:hint="inches"
                 android:inputType="textPersonName"
-                android:text="" />
+                android:paddingLeft="6dp" />
 
             <TextView
                 android:id="@+id/textView13"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:paddingStart="8dp"
                 android:text="in" />
 
         </LinearLayout>
@@ -94,7 +106,9 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Weight" />
+            android:paddingBottom="2dp"
+            android:text="Weight"
+            android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -102,14 +116,17 @@
             android:orientation="horizontal">
 
             <EditText
-                android:id="@+id/editTextTextPersonName6"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:id="@+id/frag2_weight_edTxt"
+                android:layout_width="310dp"
+                android:layout_height="40dp"
+                android:layout_marginBottom="16dp"
                 android:layout_weight="1"
                 android:background="@drawable/outlined_rectangle"
                 android:ems="10"
                 android:fontFamily="sans-serif-condensed-light"
+                android:hint="height in kg"
                 android:inputType="textPersonName"
+                android:paddingLeft="6dp"
                 android:text="" />
 
             <TextView
@@ -117,8 +134,109 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:paddingStart="8dp"
                 android:text="KG" />
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/textView14"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Blood Presure"
+            android:textStyle="bold" />
+
+        <RadioGroup
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <RadioButton
+                    android:id="@+id/frag2_bp_low_radio"
+                    android:layout_width="174dp"
+                    android:layout_height="40dp"
+                    android:text="Low" />
+
+                <RadioButton
+                    android:id="@+id/frag2_bp_heigh_radio"
+                    android:layout_width="174dp"
+                    android:layout_height="40dp"
+                    android:layout_marginBottom="16dp"
+                    android:text="High" />
+            </LinearLayout>
+
+        </RadioGroup>
+
+        <TextView
+            android:id="@+id/textView16"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="sugar"
+            android:textStyle="bold" />
+
+        <RadioGroup
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <RadioButton
+                    android:id="@+id/frag2_sgr_yes_radio"
+                    android:layout_width="174dp"
+                    android:layout_height="40dp"
+                    android:layout_marginBottom="16dp"
+                    android:layout_weight="1"
+                    android:text="Yes" />
+
+                <RadioButton
+                    android:id="@+id/frag2_sgr_no_radio"
+                    android:layout_width="174dp"
+                    android:layout_height="40dp"
+                    android:layout_weight="1"
+                    android:text="No" />
+            </LinearLayout>
+        </RadioGroup>
+
+        <TextView
+            android:id="@+id/textView17"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Are you vacinated"
+            android:textStyle="bold" />
+
+        <RadioGroup
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <RadioButton
+                    android:id="@+id/frag2_vac_yes_radio"
+                    android:layout_width="174dp"
+                    android:layout_height="40dp"
+                    android:layout_marginBottom="16dp"
+                    android:layout_weight="1"
+                    android:text="Yes" />
+
+                <RadioButton
+                    android:id="@+id/frag2_vac_no_radio"
+                    android:layout_width="174dp"
+                    android:layout_height="40dp"
+                    android:layout_weight="1"
+                    android:text="No" />
+            </LinearLayout>
+        </RadioGroup>
 
     </LinearLayout>
 
@@ -131,7 +249,10 @@
         android:layout_alignParentEnd="false"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_margin="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
         android:text="Next" />
 
 
