--- a/app/src/main/res/layout/fragment_3.xml
+++ b/app/src/main/res/layout/fragment_3.xml
@@ -11,6 +11,12 @@
     <!-- TODO: Update blank fragment layout -->
 
 
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_launcher_foreground" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
