--- a/app/src/main/res/drawable/square_light.xml
+++ b/app/src/main/res/drawable/square_light.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/grey" />
-    <stroke android:width="1dip" android:color="@color/blue_A400"/>
-    <corners android:radius="5dp"></corners>
+<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
+    <stroke android:color="@color/grey"
+
+        >
+
+
+    </stroke>
+    <size
+        android:width="50dp"
+        android:height="50dp"/>
+    <corners android:radius="10dp"></corners>
 </shape>
