--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,135 +1,146 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_centerVertical="true"
+
+    android:fillViewport="true"
 
     android:padding="20dp"
     tools:context=".LoginActivity">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:orientation="vertical"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:paddingBottom="20dp">
 
-        <ImageView
-            android:id="@+id/imageView3"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:scaleType="fitStart"
-            app:srcCompat="@drawable/logo_transparent" />
+        >
 
-        <TextView
-            android:id="@+id/textView7"
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="5dp"
-            android:fontFamily="sans-serif-condensed"
-            android:text="Welcome"
-            android:textColor="@color/black"
-            android:textSize="34sp"
-            android:textStyle="bold" />
+            android:layout_centerInParent="true"
+            android:layout_marginBottom="60dp"
+            android:orientation="vertical"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:paddingBottom="20dp">
 
-        <TextView
-            android:id="@+id/textView13"
-            android:layout_width="match_parent"
+            <ImageView
+                android:id="@+id/imageView3"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:scaleType="fitStart"
+                app:srcCompat="@drawable/logo_transparent" />
+
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="5dp"
+                android:fontFamily="sans-serif-condensed"
+                android:text="Welcome"
+                android:textColor="@color/black"
+                android:textSize="34sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/textView13"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:fontFamily="sans-serif-condensed"
+                android:text="Sign in with your email to continue"
+                android:textColor="@color/light_grey" />
+
+            <EditText
+
+                android:id="@+id/loginA_email_edtxt"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:background="@drawable/outlined_rectangle"
+                android:drawableLeft="@drawable/icon_email_24"
+
+                android:drawablePadding="5dp"
+                android:ems="10"
+                android:fontFamily="sans-serif-condensed-light"
+                android:hint="Email"
+                android:inputType="textEmailAddress"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp" />
+
+            <EditText
+                android:id="@+id/loginA_password_edtxt"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:background="@drawable/outlined_rectangle"
+                android:drawableLeft="@drawable/icon_lock_24"
+                android:drawablePadding="5dp"
+                android:ems="10"
+                android:fontFamily="sans-serif-condensed-light"
+                android:hint="Password"
+                android:inputType="textPassword"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp" />
+
+            <Button
+                android:id="@+id/loginA_signin_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:background="@null"
+                android:fontFamily="sans-serif-condensed"
+                android:text="Sign In"
+                app:cornerRadius="10dp" />
+
+            <TextView
+                android:id="@+id/loginA_forget_txtVw"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:clickable="true"
+                android:fontFamily="sans-serif-condensed"
+                android:gravity="center"
+                android:text="Forget Password?"
+                android:textColor="@color/blue_A700" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="50dp"
             android:layout_marginBottom="20dp"
-            android:fontFamily="sans-serif-condensed"
-            android:text="Sign in with your email to continue"
-            android:textColor="@color/light_grey" />
+            android:orientation="horizontal">
 
-        <EditText
+            <TextView
+                android:id="@+id/textView15"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="sans-serif-condensed"
+                android:text="New to PHA?"
+                android:textColor="@color/black" />
 
-            android:id="@+id/loginA_email_edtxt"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            android:background="@drawable/outlined_rectangle"
-            android:drawableLeft="@drawable/icon_email_24"
-
-            android:drawablePadding="5dp"
-            android:ems="10"
-            android:fontFamily="sans-serif-condensed-light"
-            android:hint="Email"
-            android:inputType="textEmailAddress"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp" />
-
-        <EditText
-            android:id="@+id/loginA_password_edtxt"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            android:background="@drawable/outlined_rectangle"
-            android:drawableLeft="@drawable/icon_lock_24"
-            android:drawablePadding="5dp"
-            android:ems="10"
-            android:fontFamily="sans-serif-condensed-light"
-            android:hint="Password"
-            android:inputType="textPassword"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp" />
-
-        <Button
-            android:id="@+id/loginA_signin_btn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:background="@null"
-            android:fontFamily="sans-serif-condensed"
-            android:text="Sign In"
-            app:cornerRadius="10dp" />
-
-        <TextView
-            android:id="@+id/loginA_forget_txtVw"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:clickable="true"
-            android:fontFamily="sans-serif-condensed"
-            android:gravity="center"
-            android:text="Forget Password?"
-            android:textColor="@color/blue_A700" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/textView15"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:fontFamily="sans-serif-condensed"
-            android:text="New to PHA?"
-            android:textColor="@color/black" />
-
-        <TextView
-            android:id="@+id/loginA_register_txtVw"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:clickable="true"
-            android:fontFamily="sans-serif-condensed"
-            android:text="Register"
-            android:textColor="@color/blue_A700" />
-    </LinearLayout>
-
-</RelativeLayout>
+            <TextView
+                android:id="@+id/loginA_register_txtVw"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_weight="1"
+                android:clickable="true"
+                android:fontFamily="sans-serif-condensed"
+                android:text="Register"
+                android:textColor="@color/blue_A700" />
+        </LinearLayout>
+    </RelativeLayout>
+</ScrollView>
