--- a/app/src/main/res/layout/fragment_3.xml
+++ b/app/src/main/res/layout/fragment_3.xml
@@ -2,9 +2,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@drawable/square_light"
     android:padding="20dp"
     tools:context=".Fragments.Fragment3">
 
@@ -12,10 +13,11 @@
 
 
     <ImageButton
-        android:id="@+id/imageButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_launcher_foreground" />
+        android:id="@+id/frag3_back_imBtn"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:background="@drawable/square_light"
+        android:src="@drawable/icon_arrow_back_24" />
 
     <LinearLayout
         android:layout_width="match_parent"
