--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -21,6 +21,7 @@
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/blue_A100</item>
+        <item name="android:windowFullscreen">true</item>
         <item name="colorSecondaryVariant">@color/blue_A200</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
