--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,17 +8,19 @@
     android:padding="20dp"
     tools:context=".HomeActivity">
 
-    <ImageView
-        android:id="@+id/profile_imgVw"
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/homeA_dp_imgVw"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        app:srcCompat="@drawable/logo" />
+        android:src="@drawable/female"
+        app:civ_border_color="#FF000000"
+        app:civ_border_width="2dp" />
 
     <TextView
         android:id="@+id/greet_txtVw"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/profile_imgVw"
+        android:layout_below="@id/homeA_dp_imgVw"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="10dp"
         android:text="Good Morning"
@@ -73,7 +75,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="TextView" />
+                    android:text="TAKE A TEST" />
             </LinearLayout>
 
             <LinearLayout
@@ -88,14 +90,14 @@
                     android:id="@+id/imageView4"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/icon_fact_check_24" />
+                    app:srcCompat="@drawable/icon_person_24" />
 
                 <TextView
                     android:id="@+id/textView9"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="TextView" />
+                    android:text="NEAR BY DOCTOR" />
             </LinearLayout>
 
         </LinearLayout>
@@ -126,14 +128,14 @@
 
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/icon_medical_services_24" />
+                    app:srcCompat="@drawable/icon_fact_check_24" />
 
                 <TextView
 
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="TextView" />
+                    android:text="PREVIOUS RECORD" />
             </LinearLayout>
 
 
@@ -149,14 +151,14 @@
 
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/icon_fact_check_24" />
+                    app:srcCompat="@drawable/icon_medication_24" />
 
                 <TextView
 
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="TextView" />
+                    android:text="ONGOING MEDICATION" />
             </LinearLayout>
 
         </LinearLayout>
